--- a/mobile/src/main/res/layout/activity_logged.xml
+++ b/mobile/src/main/res/layout/activity_logged.xml
@@ -2,36 +2,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="onitsuma.com.twear.activity.LoggedActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="com.example.csuay.twear.activity.LoggedActivity">
 
     <TextView
-        android:id="@+id/logged_static"
+        android:text="You're loged as"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/logged_in_static" />
+        android:id="@+id/textView" />
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
         android:id="@+id/logged_in_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/logged_static"
-        android:layout_toEndOf="@+id/logged_static"
-        android:layout_toRightOf="@+id/logged_static" />
+        android:layout_below="@+id/textView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_below="@+id/logged_static">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/logged_in_name"
+        android:id="@+id/scrollView">
 
-        <LinearLayout
-            android:id="@+id/timelineLayout"
+        <TableLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:orientation="vertical"></LinearLayout>
+            android:layout_below="@+id/logged_in_name"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:orientation="horizontal"
+            android:id="@+id/timeline_layout"></TableLayout>
     </ScrollView>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Send Tweets"
+        android:id="@+id/send_tweets_button"
+        android:layout_above="@+id/scrollView"
+        android:layout_alignRight="@+id/scrollView"
+        android:layout_alignEnd="@+id/scrollView"
+        android:enabled="false" />
 </RelativeLayout>
