--- a/mobile/src/main/res/menu/menu_logged.xml
+++ b/mobile/src/main/res/menu/menu_logged.xml
@@ -2,6 +2,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="onitsuma.com.twear.activity.LoggedActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+    <item android:id="@+id/settings_logout" android:title="@string/logout_settings"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
