--- a/wear/src/main/res/layout/activity_time_line.xml
+++ b/wear/src/main/res/layout/activity_time_line.xml
@@ -16,6 +16,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <android.support.wearable.view.GridViewPager
         android:id="@+id/pager"
         android:layout_width="match_parent"
@@ -27,5 +28,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|bottom"></android.support.wearable.view.DotsPageIndicator>
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/tweets_pb"
+        android:layout_gravity="center" />
 
 </FrameLayout>
