--- a/wear/src/main/res/layout/activity_time_line.xml
+++ b/wear/src/main/res/layout/activity_time_line.xml
@@ -12,9 +12,10 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/swipe_refresh_layout">
 
 
     <android.support.wearable.view.GridViewPager
@@ -35,5 +36,4 @@
         android:layout_height="wrap_content"
         android:id="@+id/tweets_pb"
         android:layout_gravity="center" />
-
-</FrameLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
