--- a/mobile/src/main/res/layout/activity_logged.xml
+++ b/mobile/src/main/res/layout/activity_logged.xml
@@ -6,15 +6,18 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/material_blue_grey_950"
     tools:context="com.example.csuay.twear.activity.LoggedActivity">
 
     <TextView
+        android:textColor="@color/background_material_light"
         android:text="You're loged as"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView" />
 
     <TextView
+        android:textColor="@color/background_material_light"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Text"
@@ -36,16 +39,27 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:orientation="horizontal"
-            android:id="@+id/timeline_layout"></TableLayout>
+            android:id="@+id/timeline_layout">
+
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView2"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@+id/logged_in_name"
+                android:layout_toEndOf="@+id/logged_in_name" />
+        </TableLayout>
     </ScrollView>
 
-    <Button
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Send Tweets"
-        android:id="@+id/send_tweets_button"
+        android:id="@+id/imageView"
         android:layout_above="@+id/scrollView"
-        android:layout_alignRight="@+id/scrollView"
-        android:layout_alignEnd="@+id/scrollView"
-        android:enabled="false" />
+        android:src="@drawable/abc_ic_menu_copy_mtrl_am_alpha"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+
 </RelativeLayout>
