--- a/mobile/src/main/res/layout/activity_logged.xml
+++ b/mobile/src/main/res/layout/activity_logged.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingRight="25dp"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@color/material_blue_grey_950"
@@ -52,14 +52,16 @@
         </TableLayout>
     </ScrollView>
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView"
+    <ImageButton
+        android:background="@color/material_blue_grey_950"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/tw_button"
         android:layout_above="@+id/scrollView"
-        android:src="@drawable/abc_ic_menu_copy_mtrl_am_alpha"
+        android:src="@drawable/tw__ic_logo_blue"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:padding="20dp" />
 
 
 </RelativeLayout>
