--- a/mobile/src/main/res/layout/activity_logged.xml
+++ b/mobile/src/main/res/layout/activity_logged.xml
@@ -6,18 +6,18 @@
     android:paddingRight="25dp"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="@color/material_blue_grey_950"
+    android:background="@color/tw__solid_white"
     tools:context="com.example.csuay.twear.activity.LoggedActivity">
 
     <TextView
-        android:textColor="@color/background_material_light"
+        android:textColor="@color/tw__tweet_action_color"
         android:text="You're loged as"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView" />
 
     <TextView
-        android:textColor="@color/background_material_light"
+        android:textColor="@color/tw__tweet_action_color"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Text"
@@ -26,42 +26,43 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <ScrollView
+    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/swipe_refresh_layout"
         android:layout_below="@+id/logged_in_name"
-        android:id="@+id/scrollView">
+        android:paddingTop="10dp">
 
-        <TableLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_below="@+id/logged_in_name"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:orientation="horizontal"
-            android:id="@+id/timeline_layout">
+            android:id="@+id/scrollView"
+            android:paddingTop="10dp">
 
+            <TableLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:orientation="horizontal"
+                android:id="@+id/timeline_layout">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/imageView2"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/logged_in_name"
-                android:layout_toEndOf="@+id/logged_in_name" />
-        </TableLayout>
-    </ScrollView>
+            </TableLayout>
+        </ScrollView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <ImageButton
         android:background="@color/material_blue_grey_950"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:id="@+id/tw_button"
-        android:layout_above="@+id/scrollView"
+        android:layout_above="@+id/swipe_refresh_layout"
         android:src="@drawable/tw__ic_logo_blue"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:padding="20dp" />
+        android:padding="20dp"
+        android:visibility="invisible" />
 
 
 </RelativeLayout>
