--- a/mobile/src/main/res/layout/activity_logged.xml
+++ b/mobile/src/main/res/layout/activity_logged.xml
@@ -6,7 +6,6 @@
     android:paddingRight="25dp"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="@color/tw__solid_white"
     tools:context="com.example.csuay.twear.activity.LoggedActivity">
 
     <TextView
@@ -25,47 +24,24 @@
 
         android:id="@+id/logged_in_name"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/textView"
         android:layout_toEndOf="@+id/textView"
-        android:paddingLeft="5dp" />
+        android:paddingStart="5dp"
+        android:paddingBottom="10dp" />
 
-    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/swipe_refresh_layout"
-        android:layout_below="@+id/logged_in_name"
-        android:paddingTop="10dp">
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="140dp"
+        android:id="@+id/backGroundView"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentStart="true"
+        android:paddingTop="10dp" />
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/logged_in_name"
-            android:id="@+id/scrollView"
-            android:paddingTop="10dp">
-
-            <TableLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:orientation="horizontal"
-                android:id="@+id/timeline_layout">
-
-            </TableLayout>
-        </ScrollView>
-    </android.support.v4.widget.SwipeRefreshLayout>
-
-    <ImageButton
-        android:background="@color/material_blue_grey_950"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:id="@+id/tw_button"
-        android:layout_above="@+id/swipe_refresh_layout"
-        android:src="@drawable/tw__ic_logo_blue"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:padding="20dp"
-        android:visibility="invisible" />
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/userImage"
+        android:layout_below="@+id/backGroundView"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
