--- a/mobile/src/main/res/values/styles.xml
+++ b/mobile/src/main/res/values/styles.xml
@@ -2,7 +2,11 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+        <item name="android:colorPrimary">@color/tw__blue_pressed</item>
+        <item name="android:colorPrimaryDark">@color/tw__blue_pressed</item>
+        <item name="android:textColorPrimary">@color/tw__solid_white</item>
+        <item name="android:windowBackground">@color/tw__solid_white</item>
+        <item name="android:navigationBarColor">@color/tw__blue_pressed</item>
     </style>
 
 </resources>
