--- a/mobile/src/main/res/layout/activity_tweet.xml
+++ b/mobile/src/main/res/layout/activity_tweet.xml
@@ -7,7 +7,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:id="@+id/tweet_layout"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
+
     tools:context="onitsuma.com.twear.activity.TweetActivity">
 
-
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/ad_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/ad_unit_id"
+        android:layout_gravity="center_horizontal|bottom" />
 </FrameLayout>
