--- a/wear/src/main/res/layout/activity_time_line.xml
+++ b/wear/src/main/res/layout/activity_time_line.xml
@@ -14,6 +14,7 @@
 -->
 <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@color/tw__blue_default"
     android:layout_height="match_parent"
     android:id="@+id/swipe_refresh_layout">
 
@@ -28,7 +29,7 @@
         android:id="@+id/page_indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|bottom"></android.support.wearable.view.DotsPageIndicator>
+        android:layout_gravity="center_horizontal|bottom" />
 
     <ProgressBar
         style="?android:attr/progressBarStyleLarge"
