--- a/mobile/src/main/res/layout/activity_sign_in.xml
+++ b/mobile/src/main/res/layout/activity_sign_in.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:paddingBottom="5dp"
         ads:adSize="BANNER"
         ads:adUnitId="@string/ad_unit_id" />
 
@@ -24,25 +25,23 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="25dp" />
 
-    <TextView
+    <onitsuma.com.twear.twitter.TwitterTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/app_name"
-        android:textAllCaps="true"
+        android:textSize="40sp"
         android:textColor="@color/tw__blue_pressed"
-
         android:id="@+id/textView"
         android:layout_marginTop="98dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
-    <TextView
+    <onitsuma.com.twear.twitter.TwitterTextView
         android:paddingTop="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/tw__blue_pressed"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/app_description"
         android:id="@+id/textView2"
         android:layout_below="@+id/textView"
