--- a/wear/src/main/res/layout/fragment_open_on_device.xml
+++ b/wear/src/main/res/layout/fragment_open_on_device.xml
@@ -13,7 +13,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:src="@drawable/common_full_open_on_phone"
-            app:circle_color="@color/tw__blue_default"
+            app:circle_color="@color/tw__blue_pressed"
             app:circle_radius="@dimen/circle_radius"
             app:circle_radius_pressed="@dimen/circle_radius_pressed"
             app:circle_padding="@dimen/circle_padding"
