--- a/mobile/src/main/res/layout/rate_dialog.xml
+++ b/mobile/src/main/res/layout/rate_dialog.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/ratingBar"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="140dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/tw__blue_default"
-        android:text="Take a moment to rate this app, thanks for your support!"
+        android:text="@string/rate_text"
         android:layout_alignEnd="@+id/ratingBar"
         android:id="@+id/textView3"
         android:padding="5dp"
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/tw__blue_pressed"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Rate Twear App"
+        android:text="@string/rate_title"
         android:id="@+id/textView4"
         android:layout_above="@+id/textView3"
         android:layout_alignStart="@+id/textView3"
@@ -44,7 +44,7 @@
         android:textColor="@color/tw__blue_pressed_light"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Remind later"
+        android:text="@string/rate_later"
         android:layout_marginTop="20dp"
         android:id="@+id/later_button"
         android:layout_below="@+id/ratingBar"
@@ -54,7 +54,7 @@
     <Button
         android:background="@color/tw__blue_pressed"
         android:layout_marginTop="20dp"
-        android:text="No thanks"
+        android:text="@string/rate_no"
         android:textColor="@color/tw__blue_pressed_light"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
